# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2007 OTRS GmbH, http://otrs.org/
# --
# $Id: CHANGES,v 1.400 2007-05-22 13:42:32 mh Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (GPL). If you
# did not receive this file, see http://www.gnu.org/licenses/gpl.txt.
# --
2.2.0 beta4 (2007/??/??)
 - (2007/05/22) Add TicketType, Service and SLA option to stats module
    to improve flexibility of dynamic stats.
 - (2007/05/22) Remove wrong item in check needed stuff section of SLAList()
    function.
 - (2007/05/21) Update german translation.
 - (2007/05/21) Improved check of needed stuff in SLAAdd() function in
    Kernel/System/SLA.pm.
 - (2007/05/21) Sync HTML style of admin masks. No functionality changed.
    -Kernel/Output/HTML/Standard/AdminAttachmentForm.dtl
    -Kernel/Output/HTML/Standard/AdminAutoResponseForm.dtl
    -Kernel/Output/HTML/Standard/AdminCustomerCompanyForm.dtl
    -Kernel/Output/HTML/Standard/AdminCustomerUserForm.dtl
    -Kernel/Output/HTML/Standard/AdminGenericAgent.dtl
    -Kernel/Output/HTML/Standard/AdminGroupForm.dtl
    -Kernel/Output/HTML/Standard/AdminLog.dtl
    -Kernel/Output/HTML/Standard/AdminNotificationForm.dtl
    -Kernel/Output/HTML/Standard/AdminPGPForm.dtl
    -Kernel/Output/HTML/Standard/AdminPOP3.dtl
    -Kernel/Output/HTML/Standard/AdminPackageManager.dtl
    -Kernel/Output/HTML/Standard/AdminPerformanceLog.dtl
    -Kernel/Output/HTML/Standard/AdminPostMasterFilter.dtl
    -Kernel/Output/HTML/Standard/AdminQueueForm.dtl
    -Kernel/Output/HTML/Standard/AdminResponseForm.dtl
    -Kernel/Output/HTML/Standard/AdminRoleForm.dtl
    -Kernel/Output/HTML/Standard/AdminSLA.dtl
    -Kernel/Output/HTML/Standard/AdminSMIMEForm.dtl
    -Kernel/Output/HTML/Standard/AdminSalutationForm.dtl
    -Kernel/Output/HTML/Standard/AdminService.dtl
    -Kernel/Output/HTML/Standard/AdminSession.dtl
    -Kernel/Output/HTML/Standard/AdminSignatureForm.dtl